--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "generate-index",
-	"version": "2.0.0",
-	"description": "gulp html 마크업 리스트 출력",
+	"version": "2.1.0",
+	"description": "Create a page index",
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
